--- a/centralizedTaskArithmetic.ipynb
+++ b/centralizedTaskArithmetic.ipynb
@@ -72,102 +72,92 @@
     "import torch.nn as nn\n",
     "from torch.utils.data import DataLoader\n",
     "import matplotlib.pyplot as plt\n",
-    "import os\n",
-    "import json\n",
     "\n",
-    "# Importing your implemented components\n",
+    "# 导入你已经实现的组件\n",
     "from taskarithmetic import SparseSGDM, compute_fisher_sensitivity, calibrate_masks\n",
-    "from fed_avg_non_iid import DINOCIFAR100 \n",
+    "from fed_avg_non_iid import DINOCIFAR100 # 或者使用你定义的模型\n",
     "from preprocessing import FederatedDataBuilder\n",
     "\n",
-    "def run_extension_experiment(strategy='least_sensitive', sparsity_ratio=0.1, calibration_batches=10):\n",
+    "def run_task_arithmetic_experiment(sparsity_ratio=0.1, calibration_batches=10):\n",
     "    \"\"\"\n",
-    "    Implements Project Part 4: Guided Extension.\n",
-    "    Compares different gradient mask calibration rules[cite: 77].\n",
+    "    应用任务算术技术进行稀疏微调\n",
     "    \"\"\"\n",
     "    DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "    \n",
-    "    # 1. Data Preparation\n",
-    "    # Project requirement: use CIFAR-100 dataset [cite: 29]\n",
+    "    # 1. 准备数据\n",
+    "    # 项目要求使用 CIFAR-100 [cite: 29]\n",
     "    data_builder = FederatedDataBuilder(val_split_ratio=0.1)\n",
     "    train_loader = DataLoader(data_builder.train_dataset, batch_size=64, shuffle=True)\n",
     "    test_loader = DataLoader(data_builder.test_dataset, batch_size=128, shuffle=False)\n",
     "\n",
-    "    # 2. Model Initialization (DINO ViT-S/16)\n",
+    "    # 2. 初始化模型 (DINO ViT-S/16)\n",
     "    model = DINOCIFAR100(num_classes=100).to(DEVICE)\n",
     "    criterion = nn.CrossEntropyLoss()\n",
     "\n",
     "    # ---------------------------------------------------------\n",
-    "    # STEP 1: Mask Calibration [cite: 68]\n",
+    "    # 第一步：校准梯度掩码 (Mask Calibration)\n",
     "    # ---------------------------------------------------------\n",
-    "    print(f\"\\n--- Strategy: {strategy} | Sparsity: {sparsity_ratio} ---\")\n",
+    "    # 项目要求：通过识别“最不敏感”的参数来校准掩码 \n",
+    "    print(f\"\\n--- 阶段 1: 掩码校准 (Sparsity: {sparsity_ratio}, Batches: {calibration_batches}) ---\")\n",
     "    \n",
-    "    masks = {}\n",
+    "    # 计算敏感度分数 (基于对角费舍尔信息矩阵)\n",
+    "    sensitivity_scores = compute_fisher_sensitivity(\n",
+    "        model, train_loader, criterion, DEVICE, num_batches=calibration_batches\n",
+    "    )\n",
     "    \n",
-    "    # Strategy 1 & 2: Sensitivity-based (Fisher Information) [cite: 78]\n",
-    "    if strategy in ['least_sensitive', 'most_sensitive']:\n",
-    "        sensitivity_scores = compute_fisher_sensitivity(\n",
-    "            model, train_loader, criterion, DEVICE, num_batches=calibration_batches\n",
-    "        )\n",
-    "        # keep_least_sensitive=True for 'least_sensitive', False for 'most_sensitive'\n",
-    "        masks = calibrate_masks(\n",
-    "            sensitivity_scores, \n",
-    "            sparsity_ratio=sparsity_ratio, \n",
-    "            keep_least_sensitive=(strategy == 'least_sensitive')\n",
-    "        )\n",
+    "    # 生成掩码：选择最不敏感 (least-sensitive) 的参数进行更新 \n",
+    "    # keep_least_sensitive=True 表示敏感度越低，掩码越可能为 1 (允许更新)\n",
+    "    masks = calibrate_masks(\n",
+    "        sensitivity_scores, \n",
+    "        sparsity_ratio=sparsity_ratio, \n",
+    "        keep_least_sensitive=True \n",
+    "    )\n",
     "    \n",
-    "    # Strategy 3 & 4: Magnitude-based [cite: 79, 80]\n",
-    "    elif strategy in ['low_magnitude', 'high_magnitude']:\n",
-    "        # Flatten all weights to find global magnitude threshold\n",
-    "        all_weights = torch.cat([p.data.abs().view(-1) for p in model.parameters() if p.requires_grad])\n",
-    "        k = int(all_weights.numel() * sparsity_ratio)\n",
-    "        \n",
-    "        if strategy == 'low_magnitude':\n",
-    "            threshold = torch.kthvalue(all_weights, k).values.item()\n",
-    "            for p in model.parameters():\n",
-    "                if p.requires_grad:\n",
-    "                    masks[p] = (p.data.abs() <= threshold).float()\n",
-    "        else: # high_magnitude\n",
-    "            threshold = torch.kthvalue(all_weights, all_weights.numel() - k).values.item()\n",
-    "            for p in model.parameters():\n",
-    "                if p.requires_grad:\n",
-    "                    masks[p] = (p.data.abs() >= threshold).float()\n",
-    "                    \n",
-    "    # Strategy 5: Random selection [cite: 80]\n",
-    "    elif strategy == 'random':\n",
-    "        for p in model.parameters():\n",
-    "            if p.requires_grad:\n",
-    "                masks[p] = (torch.rand_like(p) <= sparsity_ratio).float()\n",
+    "    # 统计掩码信息\n",
+    "    total_params = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+    "    active_params = sum(m.sum().item() for m in masks.values())\n",
+    "    print(f\"掩码校准完成。可更新参数占比: {100 * active_params / total_params:.2f}%\")\n",
     "\n",
     "    # ---------------------------------------------------------\n",
-    "    # STEP 2: Sparse Fine-tuning with SparseSGDM [cite: 70]\n",
+    "    # 第二步：使用 SparseSGDM 进行稀疏微调\n",
     "    # ---------------------------------------------------------\n",
+    "    # 项目要求：使用 SparseSGDM 并在微调时应用掩码 [cite: 70]\n",
+    "    print(\"\\n--- 阶段 2: 稀疏微调 ---\")\n",
+    "    \n",
+    "    # 初始化你的 SparseSGDM\n",
     "    optimizer = SparseSGDM(\n",
     "        model.parameters(), \n",
     "        lr=0.01, \n",
     "        momentum=0.9, \n",
     "        weight_decay=1e-4,\n",
-    "        masks=masks\n",
+    "        masks=masks # 传入校准好的掩码\n",
     "    )\n",
     "\n",
     "    history = {'train_loss': [], 'test_acc': []}\n",
-    "    epochs = 10 # Increase epochs for clearer comparison in the report [cite: 50]\n",
     "\n",
+    "    # 运行几个微调 Epoch\n",
+    "    epochs = 5\n",
     "    for epoch in range(epochs):\n",
     "        model.train()\n",
     "        running_loss = 0.0\n",
+    "        \n",
     "        for inputs, targets in train_loader:\n",
     "            inputs, targets = inputs.to(DEVICE), targets.to(DEVICE)\n",
+    "            \n",
     "            optimizer.zero_grad()\n",
     "            outputs = model(inputs)\n",
     "            loss = criterion(outputs, targets)\n",
     "            loss.backward()\n",
-    "            optimizer.step() # Applies the calibrated mask [cite: 55]\n",
+    "            \n",
+    "            # SparseSGDM 会在这一步根据掩码过滤梯度 [cite: 55]\n",
+    "            optimizer.step()\n",
+    "            \n",
     "            running_loss += loss.item()\n",
     "        \n",
-    "        # Evaluation [cite: 105]\n",
+    "        # 评估\n",
     "        model.eval()\n",
-    "        correct, total = 0, 0\n",
+    "        correct = 0\n",
+    "        total = 0\n",
     "        with torch.no_grad():\n",
     "            for inputs, targets in test_loader:\n",
     "                inputs, targets = inputs.to(DEVICE), targets.to(DEVICE)\n",
@@ -177,29 +167,21 @@
     "                correct += predicted.eq(targets).sum().item()\n",
     "        \n",
     "        acc = 100. * correct / total\n",
+    "        avg_loss = running_loss / len(train_loader)\n",
+    "        history['train_loss'].append(avg_loss)\n",
     "        history['test_acc'].append(acc)\n",
-    "        print(f\"Epoch {epoch+1} | Loss: {running_loss/len(train_loader):.4f} | Acc: {acc:.2f}%\")\n",
+    "        \n",
+    "        print(f\"Epoch {epoch+1}/{epochs} | Loss: {avg_loss:.4f} | Test Acc: {acc:.2f}%\")\n",
     "\n",
     "    return history\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    strategies = ['least_sensitive', 'most_sensitive', 'low_magnitude', 'high_magnitude', 'random']\n",
-    "    results = {}\n",
-    "    \n",
-    "    for s in strategies:\n",
-    "        results[s] = run_extension_experiment(strategy=s, sparsity_ratio=0.1)\n",
-    "    \n",
-    "    # Plotting for the report [cite: 93, 100]\n",
-    "    plt.figure(figsize=(10, 6))\n",
-    "    for s, h in results.items():\n",
-    "        plt.plot(range(1, 11), h['test_acc'], label=s)\n",
-    "    plt.xlabel('Epoch')\n",
-    "    plt.ylabel('Test Accuracy (%)')\n",
-    "    plt.title('Comparison of Mask Calibration Rules (Extension)')\n",
-    "    plt.legend()\n",
-    "    plt.grid(True)\n",
-    "    plt.savefig('extension_comparison.png')\n",
-    "    plt.show()"
+    "    # 项目建议实验不同的稀疏比例 [cite: 72]\n",
+    "    ratios = [0.05, 0.1, 0.2]\n",
+    "    for r in ratios:\n",
+    "        print(f\"\\n{'='*50}\")\n",
+    "        print(f\"实验开始: Sparsity Ratio = {r}\")\n",
+    "        run_task_arithmetic_experiment(sparsity_ratio=r)"
    ]
   }
  ],
