使用 Colab 创建而成

--- a/centralizedTaskArithmetic.ipynb
+++ b/centralizedTaskArithmetic.ipynb
@@ -1,209 +1,230 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b744f14",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# mount Google Drive\n",
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')\n",
-    "\n",
-    "# import module\n",
-    "import sys\n",
-    "sys.path.append('/content/drive/MyDrive')\n",
-    "from preprocessing import FederatedDataBuilder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7c7f7c12",
-   "metadata": {},
-   "outputs": [
+  "cells": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "======================================================================\n",
-      "Loading DINO backbone (ONE TIME ONLY)...\n",
-      "======================================================================\n"
-     ]
+      "cell_type": "code",
+      "execution_count": 1,
+      "id": "9b744f14",
+      "metadata": {
+        "id": "9b744f14",
+        "outputId": "a31bea6c-f12b-426c-9640-33f951d53c1d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ],
+      "source": [
+        "# mount Google Drive\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "# import module\n",
+        "import sys\n",
+        "sys.path.append('/content/drive/MyDrive')\n",
+        "from preprocessing import FederatedDataBuilder"
+      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using cache found in /Users/van/.cache/torch/hub/facebookresearch_dino_main\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✓ DINO backbone loaded and cached globally\n",
-      "======================================================================\n",
-      "Downloading https://www.cs.toronto.edu/~kriz/cifar-100-python.tar.gz to ./data/cifar-100-python.tar.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100.0%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./data/cifar-100-python.tar.gz to ./data\n",
-      "Files already downloaded and verified\n",
-      "\n",
-      "--- Strategy: least_sensitive | Sparsity: 0.1 ---\n",
-      "Calculating sensitivity over 10 batches...\n"
-     ]
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "7c7f7c12",
+      "metadata": {
+        "id": "7c7f7c12",
+        "outputId": "5968bde3-2bb7-4712-8723-6605f884a34b"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "======================================================================\n",
+            "Loading DINO backbone (ONE TIME ONLY)...\n",
+            "======================================================================\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Using cache found in /Users/van/.cache/torch/hub/facebookresearch_dino_main\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "✓ DINO backbone loaded and cached globally\n",
+            "======================================================================\n",
+            "Downloading https://www.cs.toronto.edu/~kriz/cifar-100-python.tar.gz to ./data/cifar-100-python.tar.gz\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100.0%\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Extracting ./data/cifar-100-python.tar.gz to ./data\n",
+            "Files already downloaded and verified\n",
+            "\n",
+            "--- Strategy: least_sensitive | Sparsity: 0.1 ---\n",
+            "Calculating sensitivity over 10 batches...\n"
+          ]
+        }
+      ],
+      "source": [
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "from torch.utils.data import DataLoader\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# 导入你已经实现的组件\n",
+        "from taskarithmetic import SparseSGDM, compute_fisher_sensitivity, calibrate_masks\n",
+        "from fed_avg_non_iid import DINOCIFAR100 # 或者使用你定义的模型\n",
+        "from preprocessing import FederatedDataBuilder\n",
+        "\n",
+        "def run_task_arithmetic_experiment(sparsity_ratio=0.1, calibration_batches=10):\n",
+        "    \"\"\"\n",
+        "    应用任务算术技术进行稀疏微调\n",
+        "    \"\"\"\n",
+        "    DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+        "\n",
+        "    # 1. 准备数据\n",
+        "    # 项目要求使用 CIFAR-100 [cite: 29]\n",
+        "    data_builder = FederatedDataBuilder(val_split_ratio=0.1)\n",
+        "    train_loader = DataLoader(data_builder.train_dataset, batch_size=64, shuffle=True)\n",
+        "    test_loader = DataLoader(data_builder.test_dataset, batch_size=128, shuffle=False)\n",
+        "\n",
+        "    # 2. 初始化模型 (DINO ViT-S/16)\n",
+        "    model = DINOCIFAR100(num_classes=100).to(DEVICE)\n",
+        "    criterion = nn.CrossEntropyLoss()\n",
+        "\n",
+        "    # ---------------------------------------------------------\n",
+        "    # 第一步：校准梯度掩码 (Mask Calibration)\n",
+        "    # ---------------------------------------------------------\n",
+        "    # 项目要求：通过识别“最不敏感”的参数来校准掩码\n",
+        "    print(f\"\\n--- 阶段 1: 掩码校准 (Sparsity: {sparsity_ratio}, Batches: {calibration_batches}) ---\")\n",
+        "\n",
+        "    # 计算敏感度分数 (基于对角费舍尔信息矩阵)\n",
+        "    sensitivity_scores = compute_fisher_sensitivity(\n",
+        "        model, train_loader, criterion, DEVICE, num_batches=calibration_batches\n",
+        "    )\n",
+        "\n",
+        "    # 生成掩码：选择最不敏感 (least-sensitive) 的参数进行更新\n",
+        "    # keep_least_sensitive=True 表示敏感度越低，掩码越可能为 1 (允许更新)\n",
+        "    masks = calibrate_masks(\n",
+        "        sensitivity_scores,\n",
+        "        sparsity_ratio=sparsity_ratio,\n",
+        "        keep_least_sensitive=True\n",
+        "    )\n",
+        "\n",
+        "    # 统计掩码信息\n",
+        "    total_params = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+        "    active_params = sum(m.sum().item() for m in masks.values())\n",
+        "    print(f\"掩码校准完成。可更新参数占比: {100 * active_params / total_params:.2f}%\")\n",
+        "\n",
+        "    # ---------------------------------------------------------\n",
+        "    # 第二步：使用 SparseSGDM 进行稀疏微调\n",
+        "    # ---------------------------------------------------------\n",
+        "    # 项目要求：使用 SparseSGDM 并在微调时应用掩码 [cite: 70]\n",
+        "    print(\"\\n--- 阶段 2: 稀疏微调 ---\")\n",
+        "\n",
+        "    # 初始化你的 SparseSGDM\n",
+        "    optimizer = SparseSGDM(\n",
+        "        model.parameters(),\n",
+        "        lr=0.05,\n",
+        "        momentum=0.9,\n",
+        "        weight_decay=1e-4,\n",
+        "        masks=masks # 传入校准好的掩码\n",
+        "    )\n",
+        "\n",
+        "    history = {'train_loss': [], 'test_acc': []}\n",
+        "\n",
+        "    # 运行几个微调 Epoch\n",
+        "    epochs = 10\n",
+        "    for epoch in range(epochs):\n",
+        "        model.train()\n",
+        "        running_loss = 0.0\n",
+        "\n",
+        "        for inputs, targets in train_loader:\n",
+        "            inputs, targets = inputs.to(DEVICE), targets.to(DEVICE)\n",
+        "\n",
+        "            optimizer.zero_grad()\n",
+        "            outputs = model(inputs)\n",
+        "            loss = criterion(outputs, targets)\n",
+        "            loss.backward()\n",
+        "\n",
+        "            # SparseSGDM 会在这一步根据掩码过滤梯度 [cite: 55]\n",
+        "            optimizer.step()\n",
+        "\n",
+        "            running_loss += loss.item()\n",
+        "\n",
+        "        # 评估\n",
+        "        model.eval()\n",
+        "        correct = 0\n",
+        "        total = 0\n",
+        "        with torch.no_grad():\n",
+        "            for inputs, targets in test_loader:\n",
+        "                inputs, targets = inputs.to(DEVICE), targets.to(DEVICE)\n",
+        "                outputs = model(inputs)\n",
+        "                _, predicted = outputs.max(1)\n",
+        "                total += targets.size(0)\n",
+        "                correct += predicted.eq(targets).sum().item()\n",
+        "\n",
+        "        acc = 100. * correct / total\n",
+        "        avg_loss = running_loss / len(train_loader)\n",
+        "        history['train_loss'].append(avg_loss)\n",
+        "        history['test_acc'].append(acc)\n",
+        "\n",
+        "        print(f\"Epoch {epoch+1}/{epochs} | Loss: {avg_loss:.4f} | Test Acc: {acc:.2f}%\")\n",
+        "\n",
+        "    return history\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    # 项目建议实验不同的稀疏比例 [cite: 72]\n",
+        "    ratios = [0.05, 0.1, 0.2]\n",
+        "    for r in ratios:\n",
+        "        print(f\"\\n{'='*50}\")\n",
+        "        print(f\"实验开始: Sparsity Ratio = {r}\")\n",
+        "        run_task_arithmetic_experiment(sparsity_ratio=r)"
+      ]
     }
-   ],
-   "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "from torch.utils.data import DataLoader\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# 导入你已经实现的组件\n",
-    "from taskarithmetic import SparseSGDM, compute_fisher_sensitivity, calibrate_masks\n",
-    "from fed_avg_non_iid import DINOCIFAR100 # 或者使用你定义的模型\n",
-    "from preprocessing import FederatedDataBuilder\n",
-    "\n",
-    "def run_task_arithmetic_experiment(sparsity_ratio=0.1, calibration_batches=10):\n",
-    "    \"\"\"\n",
-    "    应用任务算术技术进行稀疏微调\n",
-    "    \"\"\"\n",
-    "    DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "    \n",
-    "    # 1. 准备数据\n",
-    "    # 项目要求使用 CIFAR-100 [cite: 29]\n",
-    "    data_builder = FederatedDataBuilder(val_split_ratio=0.1)\n",
-    "    train_loader = DataLoader(data_builder.train_dataset, batch_size=64, shuffle=True)\n",
-    "    test_loader = DataLoader(data_builder.test_dataset, batch_size=128, shuffle=False)\n",
-    "\n",
-    "    # 2. 初始化模型 (DINO ViT-S/16)\n",
-    "    model = DINOCIFAR100(num_classes=100).to(DEVICE)\n",
-    "    criterion = nn.CrossEntropyLoss()\n",
-    "\n",
-    "    # ---------------------------------------------------------\n",
-    "    # 第一步：校准梯度掩码 (Mask Calibration)\n",
-    "    # ---------------------------------------------------------\n",
-    "    # 项目要求：通过识别“最不敏感”的参数来校准掩码 \n",
-    "    print(f\"\\n--- 阶段 1: 掩码校准 (Sparsity: {sparsity_ratio}, Batches: {calibration_batches}) ---\")\n",
-    "    \n",
-    "    # 计算敏感度分数 (基于对角费舍尔信息矩阵)\n",
-    "    sensitivity_scores = compute_fisher_sensitivity(\n",
-    "        model, train_loader, criterion, DEVICE, num_batches=calibration_batches\n",
-    "    )\n",
-    "    \n",
-    "    # 生成掩码：选择最不敏感 (least-sensitive) 的参数进行更新 \n",
-    "    # keep_least_sensitive=True 表示敏感度越低，掩码越可能为 1 (允许更新)\n",
-    "    masks = calibrate_masks(\n",
-    "        sensitivity_scores, \n",
-    "        sparsity_ratio=sparsity_ratio, \n",
-    "        keep_least_sensitive=True \n",
-    "    )\n",
-    "    \n",
-    "    # 统计掩码信息\n",
-    "    total_params = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
-    "    active_params = sum(m.sum().item() for m in masks.values())\n",
-    "    print(f\"掩码校准完成。可更新参数占比: {100 * active_params / total_params:.2f}%\")\n",
-    "\n",
-    "    # ---------------------------------------------------------\n",
-    "    # 第二步：使用 SparseSGDM 进行稀疏微调\n",
-    "    # ---------------------------------------------------------\n",
-    "    # 项目要求：使用 SparseSGDM 并在微调时应用掩码 [cite: 70]\n",
-    "    print(\"\\n--- 阶段 2: 稀疏微调 ---\")\n",
-    "    \n",
-    "    # 初始化你的 SparseSGDM\n",
-    "    optimizer = SparseSGDM(\n",
-    "        model.parameters(), \n",
-    "        lr=0.01, \n",
-    "        momentum=0.9, \n",
-    "        weight_decay=1e-4,\n",
-    "        masks=masks # 传入校准好的掩码\n",
-    "    )\n",
-    "\n",
-    "    history = {'train_loss': [], 'test_acc': []}\n",
-    "\n",
-    "    # 运行几个微调 Epoch\n",
-    "    epochs = 5\n",
-    "    for epoch in range(epochs):\n",
-    "        model.train()\n",
-    "        running_loss = 0.0\n",
-    "        \n",
-    "        for inputs, targets in train_loader:\n",
-    "            inputs, targets = inputs.to(DEVICE), targets.to(DEVICE)\n",
-    "            \n",
-    "            optimizer.zero_grad()\n",
-    "            outputs = model(inputs)\n",
-    "            loss = criterion(outputs, targets)\n",
-    "            loss.backward()\n",
-    "            \n",
-    "            # SparseSGDM 会在这一步根据掩码过滤梯度 [cite: 55]\n",
-    "            optimizer.step()\n",
-    "            \n",
-    "            running_loss += loss.item()\n",
-    "        \n",
-    "        # 评估\n",
-    "        model.eval()\n",
-    "        correct = 0\n",
-    "        total = 0\n",
-    "        with torch.no_grad():\n",
-    "            for inputs, targets in test_loader:\n",
-    "                inputs, targets = inputs.to(DEVICE), targets.to(DEVICE)\n",
-    "                outputs = model(inputs)\n",
-    "                _, predicted = outputs.max(1)\n",
-    "                total += targets.size(0)\n",
-    "                correct += predicted.eq(targets).sum().item()\n",
-    "        \n",
-    "        acc = 100. * correct / total\n",
-    "        avg_loss = running_loss / len(train_loader)\n",
-    "        history['train_loss'].append(avg_loss)\n",
-    "        history['test_acc'].append(acc)\n",
-    "        \n",
-    "        print(f\"Epoch {epoch+1}/{epochs} | Loss: {avg_loss:.4f} | Test Acc: {acc:.2f}%\")\n",
-    "\n",
-    "    return history\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    # 项目建议实验不同的稀疏比例 [cite: 72]\n",
-    "    ratios = [0.05, 0.1, 0.2]\n",
-    "    for r in ratios:\n",
-    "        print(f\"\\n{'='*50}\")\n",
-    "        print(f\"实验开始: Sparsity Ratio = {r}\")\n",
-    "        run_task_arithmetic_experiment(sparsity_ratio=r)"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "AdvancedMachingLearning",
-   "language": "python",
-   "name": "python3"
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.21"
+    },
+    "colab": {
+      "provenance": [],
+      "gpuType": "A100"
+    },
+    "accelerator": "GPU"
   },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.21"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
