--- a/centralizedTaskArithmetic.ipynb
+++ b/centralizedTaskArithmetic.ipynb
@@ -9,7 +9,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9b744f14",
-        "outputId": "912fb2bd-91cb-4e48-ff0a-9215826e0620"
+        "outputId": "1c841634-94b6-469e-ce14-ce8409bc86fa"
       },
       "outputs": [
         {
@@ -37,19 +37,127 @@
       "id": "7c7f7c12",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 110
+          "base_uri": "https://localhost:8080/"
         },
         "id": "7c7f7c12",
-        "outputId": "c1b46b0c-5671-4ff4-cb09-4983cba486ba"
+        "outputId": "87d291a8-1748-4d19-9da4-49e879942112"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid character '，' (U+FF0C) (ipython-input-469728460.py, line 110)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-469728460.py\"\u001b[0;36m, line \u001b[0;32m110\u001b[0m\n\u001b[0;31m    ratios = [0.05, 0.1, 0.2，0.5]\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character '，' (U+FF0C)\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "======================================================================\n",
+            "Loading DINO backbone (ONE TIME ONLY)...\n",
+            "======================================================================\n",
+            "Downloading: \"https://github.com/facebookresearch/dino/zipball/main\" to /root/.cache/torch/hub/main.zip\n",
+            "Downloading: \"https://dl.fbaipublicfiles.com/dino/dino_deitsmall16_pretrain/dino_deitsmall16_pretrain.pth\" to /root/.cache/torch/hub/checkpoints/dino_deitsmall16_pretrain.pth\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 82.7M/82.7M [00:00<00:00, 271MB/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✓ DINO backbone loaded and cached globally\n",
+            "======================================================================\n",
+            "\n",
+            "==================================================\n",
+            "实验开始: Sparsity Ratio = 0.5\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 169M/169M [00:02<00:00, 78.0MB/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "--- 阶段 1: 掩码校准 (Sparsity: 0.5, Batches: 10) ---\n",
+            "Calculating sensitivity over 10 batches...\n",
+            "掩码校准完成。可更新参数占比: 50.00%\n",
+            "\n",
+            "--- 阶段 2: 稀疏微调 ---\n",
+            "Epoch 1/30 | Loss: 4.4010 | Test Acc: 29.74%\n",
+            "Epoch 2/30 | Loss: 2.9891 | Test Acc: 41.24%\n",
+            "Epoch 3/30 | Loss: 2.7687 | Test Acc: 52.96%\n",
+            "Epoch 4/30 | Loss: 2.6470 | Test Acc: 38.26%\n",
+            "Epoch 5/30 | Loss: 2.5951 | Test Acc: 46.99%\n",
+            "Epoch 6/30 | Loss: 2.5358 | Test Acc: 53.68%\n",
+            "Epoch 7/30 | Loss: 2.4929 | Test Acc: 55.37%\n",
+            "Epoch 8/30 | Loss: 2.4542 | Test Acc: 55.94%\n",
+            "Epoch 9/30 | Loss: 2.4249 | Test Acc: 51.29%\n",
+            "Epoch 10/30 | Loss: 2.4209 | Test Acc: 37.07%\n",
+            "Epoch 11/30 | Loss: 2.4119 | Test Acc: 55.85%\n",
+            "Epoch 12/30 | Loss: 2.3650 | Test Acc: 47.97%\n",
+            "Epoch 13/30 | Loss: 2.3623 | Test Acc: 55.93%\n",
+            "Epoch 14/30 | Loss: 2.3259 | Test Acc: 55.25%\n",
+            "Epoch 15/30 | Loss: 2.3242 | Test Acc: 48.26%\n",
+            "Epoch 16/30 | Loss: 2.3103 | Test Acc: 55.08%\n",
+            "Epoch 17/30 | Loss: 2.2951 | Test Acc: 56.92%\n",
+            "Epoch 18/30 | Loss: 2.2877 | Test Acc: 45.94%\n",
+            "Epoch 19/30 | Loss: 2.2769 | Test Acc: 51.69%\n",
+            "Epoch 20/30 | Loss: 2.2536 | Test Acc: 55.84%\n",
+            "Epoch 21/30 | Loss: 2.2328 | Test Acc: 56.36%\n",
+            "Epoch 22/30 | Loss: 2.2194 | Test Acc: 46.56%\n",
+            "Epoch 23/30 | Loss: 2.2161 | Test Acc: 56.59%\n",
+            "Epoch 24/30 | Loss: 2.2017 | Test Acc: 57.49%\n",
+            "Epoch 25/30 | Loss: 2.1908 | Test Acc: 50.74%\n",
+            "Epoch 26/30 | Loss: 2.1968 | Test Acc: 56.48%\n",
+            "Epoch 27/30 | Loss: 2.1781 | Test Acc: 52.01%\n",
+            "Epoch 28/30 | Loss: 2.1720 | Test Acc: 51.49%\n",
+            "Epoch 29/30 | Loss: 2.1714 | Test Acc: 49.98%\n",
+            "Epoch 30/30 | Loss: 2.1536 | Test Acc: 49.41%\n",
+            "\n",
+            "==================================================\n",
+            "实验开始: Sparsity Ratio = 0.7\n",
+            "\n",
+            "--- 阶段 1: 掩码校准 (Sparsity: 0.7, Batches: 10) ---\n",
+            "Calculating sensitivity over 10 batches...\n",
+            "掩码校准完成。可更新参数占比: 70.00%\n",
+            "\n",
+            "--- 阶段 2: 稀疏微调 ---\n",
+            "Epoch 1/30 | Loss: 3.4798 | Test Acc: 54.39%\n",
+            "Epoch 2/30 | Loss: 2.1801 | Test Acc: 46.70%\n",
+            "Epoch 3/30 | Loss: 1.9823 | Test Acc: 48.35%\n",
+            "Epoch 4/30 | Loss: 1.8609 | Test Acc: 57.99%\n",
+            "Epoch 5/30 | Loss: 1.7738 | Test Acc: 53.05%\n",
+            "Epoch 6/30 | Loss: 1.7162 | Test Acc: 59.36%\n",
+            "Epoch 7/30 | Loss: 1.6835 | Test Acc: 47.21%\n",
+            "Epoch 8/30 | Loss: 1.6642 | Test Acc: 62.58%\n",
+            "Epoch 9/30 | Loss: 1.6093 | Test Acc: 63.13%\n",
+            "Epoch 10/30 | Loss: 1.5703 | Test Acc: 50.56%\n",
+            "Epoch 11/30 | Loss: 1.5690 | Test Acc: 60.99%\n",
+            "Epoch 12/30 | Loss: 1.5435 | Test Acc: 57.79%\n",
+            "Epoch 13/30 | Loss: 1.5365 | Test Acc: 55.29%\n",
+            "Epoch 14/30 | Loss: 1.5244 | Test Acc: 65.51%\n",
+            "Epoch 15/30 | Loss: 1.4946 | Test Acc: 63.65%\n",
+            "Epoch 16/30 | Loss: 1.4854 | Test Acc: 56.74%\n",
+            "Epoch 17/30 | Loss: 1.4893 | Test Acc: 57.57%\n",
+            "Epoch 18/30 | Loss: 1.4778 | Test Acc: 63.44%\n",
+            "Epoch 19/30 | Loss: 1.4518 | Test Acc: 62.43%\n",
+            "Epoch 20/30 | Loss: 1.4404 | Test Acc: 36.78%\n",
+            "Epoch 21/30 | Loss: 1.4753 | Test Acc: 59.68%\n",
+            "Epoch 22/30 | Loss: 1.4295 | Test Acc: 63.04%\n",
+            "Epoch 23/30 | Loss: 1.4243 | Test Acc: 63.05%\n",
+            "Epoch 24/30 | Loss: 1.3970 | Test Acc: 64.81%\n",
+            "Epoch 25/30 | Loss: 1.4075 | Test Acc: 46.01%\n",
+            "Epoch 26/30 | Loss: 1.4036 | Test Acc: 63.46%\n",
+            "Epoch 27/30 | Loss: 1.4056 | Test Acc: 65.68%\n",
+            "Epoch 28/30 | Loss: 1.3984 | Test Acc: 57.58%\n",
+            "Epoch 29/30 | Loss: 1.3874 | Test Acc: 65.62%\n",
+            "Epoch 30/30 | Loss: 1.3784 | Test Acc: 65.78%\n"
           ]
         }
       ],
