--- a/extension.ipynb
+++ b/extension.ipynb
@@ -85,8 +85,8 @@
     "        results[s] = run_strategy(s)\n",
     "    \n",
     "    # 绘图并保存结果用于 Report [cite: 93]\n",
-    "    # plt.plot(...) \n",
-    "    # plt.savefig('extension_results.png')"
+    "    plt.plot(...) \n",
+    "    plt.savefig('extension_results.png')"
    ]
   }
  ],
