--- a/fed_iid_taskArithmetic.ipynb
+++ b/fed_iid_taskArithmetic.ipynb
@@ -22,8 +22,17 @@
    "execution_count": null,
    "id": "69aac5f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing fed_iid_taskArithmetic.py\n"
+     ]
+    }
+   ],
    "source": [
+    "%%writefile fed_iid_taskArithmetic.py\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import copy\n",
@@ -88,9 +97,9 @@
     "    DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "    \n",
     "    # 数据准备\n",
-    "    builder = FederatedDataBuilder()\n",
+    "    builder = FederatedDataBuilder(K=num_clients)\n",
     "    # 获取 IID 划分\n",
-    "    dict_users = builder.build_iid() \n",
+    "    dict_users = builder.get_iid_partition() \n",
     "    test_loader = DataLoader(builder.test_dataset, batch_size=128, shuffle=False)\n",
     "\n",
     "    # 初始化全局模型\n",
@@ -161,8 +170,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "AdvancedMachingLearning",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
